--- a/resume/club/index.html
+++ b/resume/club/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<!-- Mirrored from ifyoucrashed.today/resume/club/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 13 Oct 2016 02:08:00 GMT -->
+<!-- Mirrored from ifyoucrashed.today/resume/club/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 06 Jan 2017 09:23:06 GMT -->
 <head>
   <title>Club of employers</title>
   <style>
@@ -19,7 +19,7 @@
   </style>
 </head>
 <body>
-<section><p>yes</p><div><sub>at UTC 2016-08-25 17:21:14</sub></div></section><section><p>No</p><div><sub>at UTC 2016-08-27 06:14:36</sub></div></section><section><p>yes</p><div><sub>at UTC 2016-08-27 06:38:26</sub></div></section><section><p>uiyi</p><div><sub>at UTC 2016-08-27 12:37:33</sub></div></section><section><p>yes</p><div><sub>at UTC 2016-09-01 23:18:11</sub></div></section><section><p>ye sure</p><div><sub>at UTC 2016-09-04 04:08:25</sub></div></section><section><p>yes</p><div><sub>at UTC 2016-09-05 20:57:15</sub></div></section><section><p>sure</p><div><sub>at UTC 2016-09-11 15:45:40</sub></div></section><section><p>.</p><div><sub>at UTC 2016-09-11 20:58:39</sub></div></section><section><p>maybe</p><div><sub>at UTC 2016-09-20 02:24:07</sub></div></section><section><p>sure</p><div><sub>at UTC 2016-09-22 08:43:52</sub></div></section><section><p>Why not?</p><div><sub>at UTC 2016-09-25 17:18:49</sub></div></section><section><p>yes</p><div><sub>at UTC 2016-09-27 15:53:53</sub></div></section><section><p>k</p><div><sub>at UTC 2016-10-08 02:31:09</sub></div></section><section><p>yes</p><div><sub>at UTC 2016-10-09 03:29:59</sub></div></section><section><p>yeah</p><div><sub>at UTC 2016-10-12 22:05:41</sub></div></section><nav><a href="https://ifyoucrashed.today/resume/">Resume</a> | Jump to page: <a href="index4658.html?page=2">2</a> <a href="index2679.html?page=1">1</a> <a href="index4658.html?page=2">2</a> <a href="index2679.html?page=1">1</a> <a href="index2679.html?page=1">1</a> <a href="index2679.html?page=1">1</a> <a href="index2679.html?page=1">1</a> <a href="index4658.html?page=2">2</a> <a href="index4658.html?page=2">2</a> <a href="index2679.html?page=1">1</a> </nav>
+<section><p>home@ifyoucrashed.today</p><div><sub>at UTC 2016-11-09 13:21:57</sub></div></section><section><p>Yes</p><div><sub>at UTC 2016-11-10 15:54:40</sub></div></section><section><p>of course</p><div><sub>at UTC 2016-11-14 02:20:25</sub></div></section><section><p>yes</p><div><sub>at UTC 2016-11-18 18:26:01</sub></div></section><section><p>Yes</p><div><sub>at UTC 2016-11-22 00:45:23</sub></div></section><section><p>yes</p><div><sub>at UTC 2016-11-30 16:58:44</sub></div></section><section><p>YES</p><div><sub>at UTC 2016-12-15 15:50:52</sub></div></section><section><p>No.</p><div><sub>at UTC 2016-12-22 23:11:04</sub></div></section><section><p>yes</p><div><sub>at UTC 2016-12-24 13:44:36</sub></div></section><section><p>wish you were here</p><div><sub>at UTC 2017-01-05 15:53:54</sub></div></section><section><p>What</p><div><sub>at UTC 2017-01-05 23:03:17</sub></div></section><section><p>No</p><div><sub>at UTC 2017-01-06 03:57:23</sub></div></section><section><p>yes</p><div><sub>at UTC 2017-01-06 04:17:48</sub></div></section><nav><a href="https://ifyoucrashed.today/resume/">Resume</a> | Jump to page: <a href="index2679.html?page=1">1</a> <a href="index2679.html?page=1">1</a> <a href="index2679.html?page=1">1</a> <a href="indexfdb0.html?page=4">4</a> <a href="indexfdb0.html?page=4">4</a> <a href="index4658.html?page=2">2</a> <a href="index9ba9.html?page=3">3</a> <a href="indexfdb0.html?page=4">4</a> <a href="index2679.html?page=1">1</a> <a href="index4658.html?page=2">2</a> </nav>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -32,5 +32,5 @@
   </script>
 </body>
 
-<!-- Mirrored from ifyoucrashed.today/resume/club/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 13 Oct 2016 02:08:00 GMT -->
+<!-- Mirrored from ifyoucrashed.today/resume/club/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 06 Jan 2017 09:23:06 GMT -->
 </html>
